# ai-relay-service

./: .gitignore  AGENT_README.md  BUILDING.md  CHANGELOG.md  LICENSE  Makefile  NODE_CLI_SPEC.md  README.md  STATUS.md  from-server.txt  pyproject.toml
docs/: REPORT_NODE_CLI.md  concepts.md  dashboard.md  design-board.md  getting-started.md  node-readme.md  nodes-design.md  setup.md  skill.md  token-concept.md
docs/admin/: setup.md
docs/adr/: adr-001-node-id-schema.md  adr-002-bootstrap-and-recovery.md
docs/node/: capabilities.md  cli-reference.md  setup.md  ssn.md  token-lifecycle.md
docs/node-operator/: capabilities.md  node-cli-reference.md  proxmox-worker-setup.md  token-lifecycle.md
docs/reference/: api.md  design-board.md
docs/server/: admin.md  dashboard.md  setup.md
examples/: capabilities.yaml  config.yaml  sse_client.py
examples/agent-integration/: README.md  ai-relay-agent-poller.py  ai-relay-agent-poller.service  ai-relay-agent-poller.service.template  relay-task.py
examples/nodes/: README.md  approve_nodes.py  board_node.py  node_base.py  relay_client.py  vault_node.py
nodes/common/: README.md  capability.py  (+7 more)
scripts/: manual_node_test.py
systemd/: ai-relay-service.service  ai-relay-ssn.service
tests/: conftest.py  test_auth.py  test_capability_pages.py  test_cli.py  test_dashboard.py  test_db.py  test_discovery.py  test_events.py  test_example_nodes.py  test_handler_runner.py  test_maintenance.py  test_node_registry.py  test_rate_limit.py  test_scheduler.py  test_ssn.py  test_storage.py  test_storage_e2e.py  test_zeroconf.py
(+61 files in other folders)
