[project]
name = "relay-server"
version = "2.0.0"
description = "AI-Relay-Service: Distributed agent cluster server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-multipart>=0.0.18",
    "bcrypt>=4.1",
    "itsdangerous>=2.2",
    "zeroconf>=0.63",
    "slowapi>=0.1",
    "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
relay-server = "relay_server.main:main"
relay-recovery = "relay_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I"]
per-file-ignores = { "tests/test_node_registry.py" = ["F401"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
